force-app/main/default/objects/ProjectTeamMember__c/ProjectTeamMember__c.object-meta.xml
<CustomObject>
    <label>Project Team Member</label>
    <nameField>
        <displayFormat>PTM-{000000}</displayFormat>
        <label>Project Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>