force-app/main/default/objects/ProjectTeamMember__c/fields/LastOpportunityAssignedDate__c.field-meta.xml
<CustomField>
    <fullName>LastOpportunityAssignedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Sales คนนี้ถูก Assign Opp ล่าสุดเมื่อ</description>
    <label>Last Opportunity Assigned Date</label>
    <type>DateTime</type>
</CustomField>