force-app/main/default/objects/ProjectTeamMember__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <description>Project ที่ Sales สามารถขายได้</description>
    <label>Project Code</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Team Members</relationshipLabel>
    <relationshipName>Project_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>