force-app/main/default/objects/ProjectTeamMember__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Team ที่สามารถขาย Project นี้ได้</description>
    <label>Sales Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectTeamMembers</relationshipName>
    <type>Lookup</type>
</CustomField>