force-app/main/default/objects/ProjectTeamMember__c/fields/SalesTeamName__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamName__c</fullName>
    <description>Formula to get Sales Team Name</description>
    <formula>SalesTeam__r.FirstName + &quot; &quot; +  SalesTeam__r.LastName</formula>
    <label>SalesTeamName</label>
    <type>Text</type>
</CustomField>