force-app/main/default/objects/ProjectTeamMember__c/fields/UnavailableTo__c.field-meta.xml
<CustomField>
    <fullName>UnavailableTo__c</fullName>
    <description>Sales คนนี้สะดวกรับงานตั้งแต่วันเวลา</description>
    <formula>SalesTeam__r.UnavailableTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unavailable To</label>
    <type>DateTime</type>
</CustomField>